--- a/experiments/continual_experiments/lop/permuted_mnist/analysis/NC_thresh.ipynb
+++ b/experiments/continual_experiments/lop/permuted_mnist/analysis/NC_thresh.ipynb
@@ -639,6 +639,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 118,
+   "id": "548626a9-976e-4158-bfd9-f7c220a214fa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.6064548309654795, -0.9938598136807911)"
+      ]
+     },
+     "execution_count": 118,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nc_acc_cor[0], epochs_acc_cor[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 115,
    "id": "bbaf701f-ae29-4593-87a7-df586e97108a",
    "metadata": {},
